updating store front

--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@stripe/stripe-js": "^2.1.11",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "embla-carousel-autoplay": "^8.0.0-rc14",
+    "embla-carousel-react": "^8.0.0-rc14",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
     "next-sanity": "^6.0.5",
     "react": "^18",
     "react-dom": "^18",
     "stripe": "^14.5.0",
+    "swiper": "^11.0.5",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "use-shopping-cart": "^3.1.8"
